# step

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  galaxy.yml  pyproject.toml
.github/workflows/: lint.yml  pull_request.yml  release.yml
meta/: runtime.yml
plugins/module_utils/: README.md  __init__.py  process.py  provisioner.py  utils.py
plugins/modules/: bootstrap.py  configure.py  initialize.py  initilaize.py  provisioner.py
roles/ca_bootstrap/tasks/: install_Debian.yml  install_RedHat.yml  main.yml
roles/ca_server/tasks/: install_Debian.yml  install_RedHat.yml  main.yml
roles/ca_server/templates/: unit.j2
templates/: changelog.md.j2
